delete items / added scss /

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -84,6 +84,11 @@ html, body {
           align-items: center;
 }
 
+.block-info:hover {
+  text-decoration: line-through;
+  cursor: pointer;
+}
+
 .block-info {
   display: -webkit-box;
   display: -ms-flexbox;
